force-app/main/default/objects/Krow__Work_Schedule__c/Krow__Work_Schedule__c.object-meta.xml
<CustomObject>
    <label>Work Schedule</label>
    <nameField>
        <displayFormat>WS-{0000}</displayFormat>
        <label>Work Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>