force-app/main/default/objects/Krow__Work_Schedule__c/fields/Krow__Holiday_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Krow__Holiday_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holiday Schedule</label>
    <referenceTo>Krow__Holiday_Schedule__c</referenceTo>
    <relationshipLabel>Work Schedules</relationshipLabel>
    <relationshipName>Work_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>