force-app/main/default/objects/Krow__Work_Schedule__c/fields/Krow__Mon__c.field-meta.xml
<CustomField>
    <fullName>Krow__Mon__c</fullName>
    <description>Monday</description>
    <inlineHelpText>Monday</inlineHelpText>
    <label>Mon</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>