force-app/main/default/objects/Krow__Work_Schedule__c/fields/Krow__Target_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Krow__Target_Utilization__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Target Utilization %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>