force-app/main/default/objects/Krow__Work_Schedule__c/fields/Krow__Thu__c.field-meta.xml
<CustomField>
    <fullName>Krow__Thu__c</fullName>
    <label>Thu</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>